# com2009_vision

./: CMakeLists.txt  README.md  package.xml
install/: week6.sh
launch/: coloured_pillars.launch  line_following.launch  where_is_the_line.launch
models/line_following_track/: model.config
models/line_following_track/materials/scripts/: line_following_track.material
src/: colour_search.py  image_colours.py
